fix: Slider, z-index

--- a/src/index.css
+++ b/src/index.css
@@ -44,12 +44,8 @@ input[type='number']::-webkit-outer-spin-button {
 .tooltip .tooltip-tip {
   @apply z-50;
 }
-.TradeBar,
 .modal {
   @apply z-40;
-}
-.Header {
-  @apply z-30;
 }
 .select ul[role='listbox'],
 .dropdown [role='menu'] {
